[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-js"
version = "5.0.0"
description = "Support for using Sphinx on JSDoc-documented JS code"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Hood Chatham", email = "roberthoodchatham@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "Jinja2>2.0",
    "parsimonious>=0.10.0,<0.11.0",
    "Sphinx>=4.1.0",
    "markupsafe==3.0.2",
    "attrs",
    "cattrs<25.1",
]
keywords = [
    "sphinx",
    "documentation",
    "docs",
    "javascript",
    "js",
    "jsdoc",
    "restructured",
    "typescript",
    "typedoc",
]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/pyodide/sphinx-js"

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# Strict checks
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = "sphinx_js.parsers"
disallow_untyped_defs = false


[tool.ruff]
select = [
  "E",     # pycodestyles
  "W",     # pycodestyles
  "F",     # pyflakes
  "B0",    # bugbear (all B0* checks enabled by default)
  "B904",  # bugbear (Within an except clause, raise exceptions with raise ... from err)
  "B905",  # bugbear (zip() without an explicit strict= parameter set.)
  "UP",    # pyupgrade
  "I",     # isort
  "PGH",   # pygrep-hooks
]
ignore = ["E402", "E501", "E731", "E741", "B904", "B020"]
target-version = "py310"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]
